--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,131 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: linear-gradient(to right, #00d2ff, #3a7bd5);
+  color: white;
+}
+nav {
+  position: absolute;
+  top: 10px;
 }
 
-a {
-  color: #00B7FF;
+nav ul {
+  list-style: none;
+  background-color: #fff;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+}
+nav li {
+  float: left;
+  margin: 1px 20px;
+  padding: 5px;
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 10px;
+  color: #FF512F;
+  display: block;
+  transition: .3s background-color;
+}
+nav a:hover {
+  background-color: #DD2476;
+}
+
+nav a.active {
+  background-color: #ccc;
+  color: #444;
+  cursor: default;
+}
+
+.success {
+  background-color: turquoise;
+  color: black;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.error {
+  background-color: red;
+  color: white;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 80px;
+  width: 100%;
+  margin-bottom: 110px;
+  background: white;
+}
+
+form {
+	padding: 20px 0;
+	position: relative;
+	z-index: 2;
+}
+
+input, #room-desc-input {
+		display: block;
+		appearance: none;
+		outline: 0;
+		border: 1px solid fade(white, 40%);
+		background-color: fade(white, 20%);
+		width: 200px;
+
+		border-radius: 3px;
+		padding: 10px 15px;
+		margin: 0 auto 10px auto;
+		display: block;
+		text-align: center;
+		font-size: 18px;
+
+		color: #FF512F;
+
+		transition-duration: 0.25s;
+		font-weight: 300;
+
+		&:hover{
+			background-color: fade(white, 40%);
+		}
+
+		&:focus{
+			background-color: white;
+			width: 250px;
+
+			color: #FF512F;
+		}
+	}
+
+	button {
+		appearance: none;
+		outline: 0;
+		background-color: white;
+		border: 0;
+		padding: 10px 15px;
+		color: #FF512F;
+		border-radius: 3px;
+		width: 200px;
+		cursor: pointer;
+		font-size: 18px;
+		transition-duration: 0.25s;
+
+		&:hover{
+			background-color: rgb(245, 247, 249);
+		}
+	}
+}
+
+
+img {
+  width: 100%;
+
 }
