--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+
 <h1><%= title %></h1>
 
 <% if (successMessage.length > 0 ) { %>
@@ -10,6 +11,116 @@
 <% } %>
 
 
-<p>Welcome to the homepage <%= title %></p>
+<p><%= title %></p>
 
-<img src="https://media3.giphy.com/media/C2tMjXY2EtOP6/giphy.gif">
+<div class="overlay-container container-fluid">
+</div>
+  <div class="inner">
+
+    <div class="row">
+      <div class="col-md-4"><div class = "btn btn-default">Job Log</div></div>
+      <div class="col-md-4"><div class = "btn btn-default">Task List</div></div>
+      <div class="col-md-4"><div class = "btn btn-default">Time Tracking</div></div>
+      </div>
+
+      <div class ="row">
+        <div class="col-md-4"><div class = "btn btn-default">Expense Reports</div></div>
+        <div class="col-md-4"><div class = "btn btn-default admin">Reports</div></div>
+        <div class="col-md-4"><div class = "btn btn-default admin">Users</div></div>
+      </div>
+
+    </div>
+
+    <br>
+
+    <table class="table table-bordered table-striped table-hover table-responsive">
+      <thead>
+      <tr>
+        <th>
+          [HEADER]
+        </th>
+        <th>
+          [HEADER]
+        </th>
+        <th>
+          [HEADER]
+        </th>
+        <th>
+          [HEADER]
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+      </tr>
+      <tr>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+        <td>
+          [CONTENT]
+        </td>
+      </tr>
+    </tbody>
+</table>
+  </div>
