--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.min.css">
+    <link rel="stylesheet" href="/stylesheets/login.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
   </head>
+
   <body>
     <header>
-      <h1>Passport App</h1>
       <nav>
       <ul>
         <span><li><a href="/">Home </a></li></span>
@@ -22,14 +30,14 @@
           <span><li><a href="/login"> Log In </a> </li></span>
         <% } %>
       </ul>
+    <span class="nav-title"><h1>Project-Man Application</h1></span>
     </nav>
+
     </header>
     <br>
     <br>
     <br>
-
-    <%- body %>
-
+      <%- body %>
     <footer>
       <span>Made with &hearts; at Ironhack by</span>
       <span>Sherwino</span>
