--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,23 +13,8 @@
 
 <p><%= title %></p>
 
-<div class="overlay-container container-fluid">
-</div>
-  <div class="inner">
-
-    <div class="row">
-      <div class="col-md-4"><div class = "btn btn-default">Job Log</div></div>
-      <div class="col-md-4"><div class = "btn btn-default">Task List</div></div>
-      <div class="col-md-4"><div class = "btn btn-default">Time Tracking</div></div>
-      </div>
-
-      <div class ="row">
-        <div class="col-md-4"><div class = "btn btn-default">Expense Reports</div></div>
-        <div class="col-md-4"><div class = "btn btn-default admin">Reports</div></div>
-        <div class="col-md-4"><div class = "btn btn-default admin">Users</div></div>
-      </div>
-
-    </div>
+<div class="overlay-container container-fluid"></div>
+  <div class="inner"></div>
 
     <br>
 
