--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -9,7 +9,7 @@ body {
 .overlay-container {
     background: linear-gradient(to right, #00d2ff, #3a7bd5);
     height: 900px;
-    opacity: 0.2;
+    opacity: 0.7;
 }
 
 .inner {
@@ -19,50 +19,35 @@ body {
   top: 180px;
 }
 
-nav {
-  position: absolute;
-  top: 10px;
-}
-
-nav ul {
-  list-style: none;
-  background-color: #fff;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-  display: inline-block;
-}
-nav li {
-  float: left;
-  margin: 1px 20px;
-  padding: 5px;
-  font-size: 1.2em;
-  line-height: 40px;
-  height: 40px;
-}
-
-nav a {
-  text-decoration: none;
-  padding: 10px;
-  color: #FF512F;
-  display: block;
-  transition: .3s background-color;
-}
-nav a:hover {
-  background-color: #DD2476;
-}
-
-nav a.active {
-  background-color: #ccc;
-  color: #444;
-  cursor: default;
-}
-
-.nav-title {
-  margin-left: 550px;
-  float: right;
-  font-size: 20px;
-}
+//
+// .navStyle ul {
+//   background-color: #fff;
+//   text-align: center;
+//   padding: 0;
+//   margin: 0;
+//   display: inline-block;
+// }
+// .navStyle li {
+//   font-size: 1.2em;
+//   line-height: 40px;
+//   height: 40px;
+// }
+//
+// .navStyle a {
+//   padding: 10px;
+//   color: #FF512F;
+//   display: block;
+//   transition: .3s background-color;
+// }
+// .navStyle a:hover {
+//   background-color: #DD2476;
+// }
+//
+// .navStyle a.active {
+//   background-color: #ccc;
+//   color: #444;
+//   cursor: default;
+// }
 
 .success {
   background-color: turquoise;
@@ -78,15 +63,15 @@ nav a.active {
   padding: 15px;
 }
 
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 80px;
-  width: 100%;
-  margin-bottom: 110px;
-  background: white;
-}
+// header {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   height: 80px;
+//   width: 100%;
+//   margin-bottom: 110px;
+//   background: white;
+// }
 
 /*form {
 	padding: 20px 0;
