--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -4,7 +4,7 @@
       <strong>Welcome.</strong> Create an account.</h1>
       <form method="post">
         <span>Name: </span>
-        <input type="text" name="user" placeholder="Username" required="required" class="input-txt">
+        <input type="text" name="user" placeholder="Name" required="required" class="input-txt">
           <br>
           <br>
           <span>Email: </span>
