--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,53 +1,24 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: url('../images/bg.jpg');
+  background-repeat: no-repeat;
   color: white;
 }
 
+// new leaf --- #00537E → #3AA17E
+// Wrought Iron --- #333333 → #5A5454
+// Previous Blue ---#00d2ff, #3a7bd5
 
 .overlay-container {
-    background: linear-gradient(to right, #00d2ff, #3a7bd5);
-    height: 900px;
+    background: linear-gradient(to right, #333333, #5A5454);
+    margin: 0px;
+    height: 100%;
+    width: 100%;
     opacity: 0.7;
+    position: absolute;
+    top: 50px;
+    z-index: -9999;
 }
-
-.inner {
-  padding: 0px;
-  margin: 20px;
-  position: absolute;
-  top: 180px;
-}
-
-//
-// .navStyle ul {
-//   background-color: #fff;
-//   text-align: center;
-//   padding: 0;
-//   margin: 0;
-//   display: inline-block;
-// }
-// .navStyle li {
-//   font-size: 1.2em;
-//   line-height: 40px;
-//   height: 40px;
-// }
-//
-// .navStyle a {
-//   padding: 10px;
-//   color: #FF512F;
-//   display: block;
-//   transition: .3s background-color;
-// }
-// .navStyle a:hover {
-//   background-color: #DD2476;
-// }
-//
-// .navStyle a.active {
-//   background-color: #ccc;
-//   color: #444;
-//   cursor: default;
-// }
 
 .success {
   background-color: turquoise;
@@ -61,6 +32,15 @@ body {
   color: white;
   border-radius: 10px;
   padding: 15px;
+}
+
+img {
+  width: 100%;
+
+}
+
+.inner {
+  padding: 15px 50px;
 }
 
 // header {
@@ -131,7 +111,39 @@ input, #room-desc-input {
 }
 */
 
-img {
-  width: 100%;
+// .inner {
+//   padding: 0px;
+//   margin: 20px;
+//   position: absolute;
+//   top: 180px;
+// }
 
-}
+//
+// .navStyle ul {
+//   background-color: #fff;
+//   text-align: center;
+//   padding: 0;
+//   margin: 0;
+//   display: inline-block;
+// }
+// .navStyle li {
+//   font-size: 1.2em;
+//   line-height: 40px;
+//   height: 40px;
+// }
+//
+// .navStyle a {
+//   padding: 10px;
+//   color: #FF512F;
+//   display: block;
+//   transition: .3s background-color;
+// }
+// .navStyle a:hover {
+//   background-color: #DD2476;
+// }
+//
+// .navStyle a.active {
+//   background-color: #ccc;
+//   color: #444;
+//   cursor: default;
+// }
