--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,98 +14,99 @@
 <p><%= title %></p>
 
 <div class="overlay-container container-fluid"></div>
-  <div class="inner"></div>
 
     <br>
 
-    <table class="table table-bordered table-striped table-hover table-responsive">
-      <thead>
-      <tr>
-        <th>
-          [HEADER]
-        </th>
-        <th>
-          [HEADER]
-        </th>
-        <th>
-          [HEADER]
-        </th>
-        <th>
-          [HEADER]
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-      </tr>
-      <tr>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-      </tr>
-      <tr>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-      </tr>
-      <tr>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-      </tr>
-      <tr>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-        <td>
-          [CONTENT]
-        </td>
-      </tr>
-    </tbody>
-</table>
+    <div class="inner">
+      <table class="table table-bordered table-striped table-hover table-responsive joblog">
+        <thead>
+        <tr>
+          <th>
+            Job Number
+          </th>
+          <th>
+            Job Name
+          </th>
+          <th>
+            Client
+          </th>
+          <th>
+            Job Type
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            2017190
+          </td>
+          <td>
+            Federal Reserve of Atlanta
+          </td>
+          <td>
+            GSA
+          </td>
+          <td>
+            MEP Design
+          </td>
+        </tr>
+        <tr>
+          <td>
+            2017191
+          </td>
+          <td>
+            Corner Bakery - Winter Haven
+          </td>
+          <td>
+            WHA Architects
+          </td>
+          <td>
+            MEPF Design
+          </td>
+        </tr>
+        <tr>
+          <td>
+            2017192
+          </td>
+          <td>
+            OSII Building - KSC
+          </td>
+          <td>
+            ECSG LLC
+          </td>
+          <td>
+            LEED Commissioning
+          </td>
+        </tr>
+        <tr>
+          <td>
+            2017193
+          </td>
+          <td>
+            MetroZoo Hippo Chamber
+          </td>
+          <td>
+            ELM Arch
+          </td>
+          <td>
+            MEPF Design
+          </td>
+        </tr>
+        <tr>
+          <td>
+            2017194
+          </td>
+          <td>
+            Zappa Residence
+          </td>
+          <td>
+            Kobi Karp Arch
+          </td>
+          <td>
+            MEP & Structural Design
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   </div>
