--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -2,23 +2,37 @@
   <div class="login">
   	<h1 class="login-heading">
       <strong>Welcome.</strong> Create an account.</h1>
-      <form method="post">
+
+      <% if (typeof errorMessage !== "undefined") { %>
+        <div class="error"> <%= errorMessage %> </div>
+      <% } %>
+
+
+      <form method="post" action='/signup'>
+
         <span>Name: </span>
-        <input type="text" name="user" placeholder="Name" required="required" class="input-txt">
+        <input id="name-input" type="text" name="signupName" placeholder="Name" class="input-txt">
           <br>
           <br>
+
           <span>Email: </span>
-          <input type="text" name="user" placeholder="Email" required="required" class="input-txt">
+          <input id="email-input" type="text" name="signupEmail" placeholder="Email" class="input-txt">
             <br>
             <br>
-            <span>Password: </span>
-          <input type="password" name="password" placeholder="Password" required="required" class="input-txt">
+
+          <span>Password: </span>
+          <input id="password-input" type="password" name="signupPassword" placeholder="Password" class="input-txt">
           <br>
+
           <div class="login-footer">
-
             <button type="submit" class="btn btn--right">Sign Up </button>
-
           </div>
+
       </form>
   </div>
 </div>
+
+<p> Do you already have an account?
+  <a href="/login"> Log In </a>
+</p>
+<br>
