--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -3,7 +3,7 @@
   	<h1 class="login-heading">
       <strong>Welcome.</strong> Please login.</h1>
       <form method="post">
-        <input type="text" name="user" placeholder="Username" required="required" class="input-txt">
+        <input type="text" name="user" placeholder="Email/Username" required="required" class="input-txt">
           <br>
           <br>
           <input type="password" name="password" placeholder="Password" required="required" class="input-txt">
