--- a/views/layouts/signup-layout.ejs
+++ b/views/layouts/signup-layout.ejs
@@ -13,8 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </head>
-
-  <body class='body-main'>
+  
+  <body class='body-signup'>
     <header>
       <nav class="navbar navbar-default navbar-fixed-top navStyle">
       	<div class="container-fluid">
@@ -29,7 +29,7 @@
       		<div class="collapse navbar-collapse" id="navbar-42BNhS428O39c">
       			<ul class="nav navbar-nav navbar-right">
               <% if (typeof user !== 'undefined') { %>
-        			    <li><a href="/projects">Projects</a></li>
+        			    <li><a href="/log">Job Log</a></li>
         			    <li><a href="/tasks">Task List</a></li>
         			    <li><a href="/time">Time Sheet</a></li>
         			    <li><a href="/expense">Expense Reports</a></li>
