--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,23 +1,28 @@
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: url('../images/bg.jpg');
-  background-repeat: no-repeat;
-  color: white;
-}
+
 
 // new leaf --- #00537E → #3AA17E
 // Wrought Iron --- #333333 → #5A5454
 // Previous Blue ---#00d2ff, #3a7bd5
 
-.overlay-container {
-    background: linear-gradient(to right, #333333, #5A5454);
-    margin: 0px;
+.body-main {
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background: url('../images/Project Man.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
     height: 100%;
     width: 100%;
-    opacity: 0.7;
-    position: absolute;
-    top: 50px;
-    z-index: -9999;
+}
+
+.body-signup {
+    background: url('../images/bg.jpg');
+}
+
+
+footer {
+  position: fixed;
+  bottom: 0px;
+  background: #5A5454;
+  color: #fff;
 }
 
 .success {
