--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,7 +13,7 @@
     width: 100%;
 }
 
-.body-signup {
+.body-other {
     background: url('../images/bg.jpg');
 }
 
@@ -47,6 +47,10 @@ img {
 .inner {
   padding: 15px 50px;
 }
+
+// .form-tainer input, .form-group #f10  {
+//   width: 40%;
+// }
 
 // header {
 //   position: absolute;
