--- a/views/layouts/signup-layout.ejs
+++ b/views/layouts/signup-layout.ejs
@@ -13,8 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </head>
-  
-  <body class='body-signup'>
+
+  <body class='body-other'>
     <header>
       <nav class="navbar navbar-default navbar-fixed-top navStyle">
       	<div class="container-fluid">
