--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -48,6 +48,15 @@ img {
   padding: 15px 50px;
 }
 
+.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
+  background-color: #ccc;
+  color:#fff;
+}
+
+.table {
+  background-color: #fff;
+}
+
 // .form-tainer input, .form-group #f10  {
 //   width: 40%;
 // }
