--- a/views/layouts/list-layout.ejs
+++ b/views/layouts/list-layout.ejs
@@ -8,13 +8,14 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.min.css">
     <link rel="stylesheet" href="/stylesheets/login.css">
+    <link rel="stylesheet" href="/stylesheets/search.min.css">
     <link rel="stylesheet" href="/stylesheets/forms.min.css">
-    <!-- <link href="vendor.css" rel="stylesheet"> -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.0/css/bootstrap-datepicker3.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/javascripts/search.js"></script>
 
   </head>
 
@@ -31,13 +32,25 @@
       			<a class="navbar-brand" href="/">Project Man</a>
       		</div>
       		<div class="collapse navbar-collapse" id="navbar-42BNhS428O39c">
-      			<ul class="nav navbar-nav navbar-right">
+            <!-- SEARCHHHHHHHHHHHHHHHHHHHHH -->
+            <ul class="nav navbar-nav navbar-left">
+              <li><a href="#search"><span class="glyphicon glyphicon-search"></span></a></li>
+            </ul>
+            <div id="search">
+              <button type="button" class="close">×</button>
+              <form>
+                <input type="search" value="" placeholder="Search for projects(s)" />
+                <button type="submit" class="btn btn-success">Search</button>
+              </form>
+            </div>
+              <!-- SEARCHHHHHHHHHHHHHHHHHHHHH ENDS -->
+              <ul class="nav navbar-nav navbar-right">
               <% if (typeof user !== 'undefined') { %>
         			    <li><a href="/projects">Projects</a></li>
                   <li><a href="/projects/new">Add Project</a></li>
-        			    <li><a href="/tasks">Task List</a></li>
+        			    <!-- <li><a href="/tasks">Task List</a></li>
         			    <li><a href="/time">Time Sheet</a></li>
-        			    <li><a href="/expense">Expense Reports</a></li>
+        			    <li><a href="/expense">Expense Reports</a></li> -->
         			    <li><a href ="/logout">Log Out</a></li>
               <% } %>
               <% if (typeof user == 'admin') { %>
@@ -53,7 +66,6 @@
       	</div>
       </nav>
     </header>
-
     <br>
     <br>
     <br>
