--- a/views/projects/project-list-view.ejs
+++ b/views/projects/project-list-view.ejs
@@ -89,7 +89,7 @@
 								<a href="/projects/<%= job._id %>/edit"><span class="glyphicon glyphicon-edit"></span></a>
 							</td>
 							<td>
-								<a href="/projects/<%= job._id %>/delete"><span class="glyphicon glyphicon-remove"></span></a>
+								<a class="linkpost" href="/projects/<%= job._id %>/delete"><span class="glyphicon glyphicon-remove"></span></a>
 							</td>
 
 						<% } %>
