--- a/public/stylesheets/sidebar.scss
+++ b/public/stylesheets/sidebar.scss
@@ -13,24 +13,19 @@ author: bootply.com
  min-height:250px;
 }
 
-#masthead h1 {
+#masthead h2 {
  font-size: 30px;
  line-height: 1;
  padding-top:20px;
+ color: #fff;
+ background: rgba(22, 13, 13, 0.71);
 }
 
 #masthead .well {
  margin-top:8%;
 }
 
-.side-right {
-  position: fixed;
-  right: 0px;
-  height: 70%;
-  width: 35%;
-  float: right;
-  background: #fff;
-}
+
 
 // .sidebarImg {
 //   height: 30%;
@@ -42,14 +37,21 @@ author: bootply.com
 
 }
 
-@media screen and (min-width: 768px) {
-  #masthead h1 {
+@media screen and (min-width: 400px) {
+  #masthead h2 {
     font-size: 50px;
+    color: #fff;
+    background: rgba(22, 13, 13, 0.71);
   }
 }
 
 .affix-top,.affix{
  position: static;
+}
+
+.side-right {
+  height: 100%;
+  background: #fff;
 }
 
 @media (min-width: 979px) {
@@ -67,6 +69,22 @@ author: bootply.com
     padding: 0px;
 
   }
+
+  .side-right {
+    position: fixed;
+    right: 0px;
+    height: 70%;
+    width: 35%;
+    float: right;
+    background: #fff;
+  }
+
+  #masthead h2 {
+    font-size: 5em;
+    color: #fff;
+    background: none;
+  }
+
 }
 
 #sidebar li.active {
