--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body class='body-main'>
+  <body class='body-main image-responsive '>
     <header>
       <nav class="navbar navbar-default navbar-fixed-top navStyle">
       	<div class="container-fluid">
@@ -52,6 +52,12 @@
     <br>
     <br>
     <br>
+    <div class="container">
+      <div class="row">
+        <div class="span4"></div>
+        <div class="span4"><img class="center-block imgScale" src="/images/logo.svg" /></div>
+        <div class="span4"></div>
+      </div>
       <%- body %>
     <footer>
       <span>Made with &hearts; at Ironhack by</span>
