--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -15,6 +15,7 @@
 .body-other {
     background: url('../images/bg.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
 }
 
