--- a/views/layouts/list-layout.ejs
+++ b/views/layouts/list-layout.ejs
@@ -38,8 +38,8 @@
             </ul>
             <div id="search">
               <button type="button" class="close">×</button>
-              <form>
-                <input type="search" value="" placeholder="Search for projects(s)" />
+              <form action="/search" method="get">
+                <input type="search" name ="projectSearchTerm" value="" placeholder="Search for projects(s)" />
                 <button type="submit" class="btn btn-success">Search</button>
               </form>
             </div>
