working with /projects/:id/edit-project route

--- a/views/projects/edit-project-view.ejs
+++ b/views/projects/edit-project-view.ejs
@@ -2,7 +2,7 @@
 <h2>Create a new project</h2>
 <div class='form-tainer row'>
 	<div class="container">
-		<form action='/projects' method='post' enctype='multipart/form-data' novalidate autocomplete="on">
+		<form action='/projects/:id/edit-project' method='patch' enctype='multipart/form-data' novalidate autocomplete="on">
 			<form id="rendered-form">
 				<div class="fb-number form-group field-jobyear">
 					<label for="jobyear" class="fb-number-label"></label>
