nav link updates

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,8 +30,8 @@
       			<ul class="nav navbar-nav navbar-right">
               <% if (typeof user !== 'undefined') { %>
         			    <li><a href="/projects">Projects</a></li>
-        			    <li><a href="/tasks">Task List</a></li>
-        			    <li><a href="/time">Time Sheet</a></li>
+        			    <li><a href="https://app.asana.com/">Task List</a></li>
+        			    <li><a href="https://gmconsulting.tsheets.com/page/login">Time Sheet</a></li>
         			    <li><a href="/expense">Expense Reports</a></li>
         			    <li><a href ="/logout">Log Out</a></li>
               <% } %>
